@@ -67,6 +67,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotation_raster)
 importFrom(ggplot2,coord_equal)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_blank)
 importFrom(ggplot2,geom_raster)
