@@ -73,6 +73,6 @@ ggplot(df) + geom_raster(aes(x = Var2, y = Var1,fill=value)) + facet_wrap(~L1) +
        scale_fill_gradientn(name = "p", colours =  heat.colors(10), na.value = NA)
 }
 ## Compare correction
-ggR(reference, sat = 1, alpha = .5, 3) +
+ggR(reference, sat = 1, alpha = .5) +
   ggR(coreg$coregImg, sat = 1, hue = .5, alpha = 0.5, ggLayer=TRUE) 
 }
